--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +45,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data file downloaded 02-27-18\n",
+    "# This will be the file used, data is from 11/1/15 to 2/20/18\n",
     "\n",
     "# Assign filename\n",
     "data_022718 = 'crime-datacrime-datacrimestat.csv'\n",
@@ -52,11 +53,172 @@
     "# Read file in DataFrame\n",
     "crime = pd.read_csv(data_022718, sep=',', low_memory=False)\n",
     "\n",
-    "# Explore Data\n",
+    "# Quick view of the data\n",
     "print(crime.head())\n",
     "print(crime.info())\n",
     "\n",
-    "\n"
+    "# Rename columns\n",
+    "crime.columns = ['incident#', 'date_occurred_on', 'date_occurred_to', 'crime_cat', '100_block_addr', 'zip', 'premise_type']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date_occurred_on      336\n",
+      "date_occurred_to    43719\n",
+      "zip                     3\n",
+      "premise_type          805\n",
+      "dtype: int64\n",
+      "Empty DataFrame\n",
+      "Columns: [incident#, date_occurred_on, date_occurred_to, crime_cat, 100_block_addr, zip, premise_type]\n",
+      "Index: []\n",
+      "             incident#   date_occurred_on   date_occurred_to      crime_cat  \\\n",
+      "63037  201700001136425  11/04/2016  00:00  06/25/2017  00:00           RAPE   \n",
+      "79708  201700000206086  02/04/2017  10:00  02/04/2017  10:14  LARCENY-THEFT   \n",
+      "82276  201700000368400  02/18/2017  12:00  02/27/2017  15:23  LARCENY-THEFT   \n",
+      "\n",
+      "             100_block_addr  zip             premise_type  \n",
+      "63037       451XX W RHEA RD  NaN                APARTMENT  \n",
+      "79708     XX W BASELINE AVE  NaN          SPECIALTY STORE  \n",
+      "82276  122XX N TABLE TOP RD  NaN  FENCED RESIDENTIAL YARD  \n",
+      "            incident# date_occurred_on   date_occurred_to      crime_cat  \\\n",
+      "248   201500002110561              NaN  11/02/2015  14:40        ROBBERY   \n",
+      "275   201500002132194              NaN  11/02/2015  17:00       BURGLARY   \n",
+      "735   201500002266800              NaN  11/05/2015  14:30  LARCENY-THEFT   \n",
+      "1044  201500002156362              NaN  11/07/2015  12:00  LARCENY-THEFT   \n",
+      "1106  201500002146054              NaN  11/07/2015  19:00        ROBBERY   \n",
+      "\n",
+      "           100_block_addr      zip                         premise_type  \n",
+      "248    41XX W BASELINE RD  85041.0  STREET / ROADWAY / ALLEY / SIDEWALK  \n",
+      "275   32XX E ROOSEVELT ST  85008.0                            APARTMENT  \n",
+      "735        47XX N 20TH ST  85016.0               GROCERY / SUPER MARKET  \n",
+      "1044       34XX N 32ND ST  85016.0                          PARKING LOT  \n",
+      "1106   15XX E MCDOWELL RD  85006.0  STREET / ROADWAY / ALLEY / SIDEWALK  \n",
+      "          incident#   date_occurred_on date_occurred_to            crime_cat  \\\n",
+      "1   201600000594484  11/01/2015  00:00              NaN                 RAPE   \n",
+      "6   201700001722914  11/01/2015  00:00              NaN        LARCENY-THEFT   \n",
+      "20  201500002102481  11/01/2015  00:01              NaN        LARCENY-THEFT   \n",
+      "24  201500002100158  11/01/2015  00:05              NaN  MOTOR VEHICLE THEFT   \n",
+      "39  201500002101137  11/01/2015  04:14              NaN              ROBBERY   \n",
+      "\n",
+      "             100_block_addr      zip                         premise_type  \n",
+      "1         13XX E ALMERIA RD  85006.0                  SINGLE FAMILY HOUSE  \n",
+      "6           279XX N 23RD LN  85085.0                  SINGLE FAMILY HOUSE  \n",
+      "20  88XX N BLACK CANYON FWY  85051.0                        HOTEL / MOTEL  \n",
+      "24      28XX W CAMELBACK RD  85017.0           CONVENIENCE MARKET / STORE  \n",
+      "39          138XX S 44TH ST  85044.0  STREET / ROADWAY / ALLEY / SIDEWALK  \n",
+      "           incident#   date_occurred_on   date_occurred_to  \\\n",
+      "122  201600000016379  11/01/2015  17:00  01/03/2016  17:03   \n",
+      "213  201500002108368  11/02/2015  09:02                NaN   \n",
+      "313  201500002114933  11/02/2015  21:30  11/03/2015  07:20   \n",
+      "323  201510000015756  11/03/2015  00:00  11/03/2015  03:17   \n",
+      "339  201500002135426  11/03/2015  02:30  11/06/2015  08:30   \n",
+      "\n",
+      "               crime_cat            100_block_addr      zip premise_type  \n",
+      "122             BURGLARY      40XX W SHANGRI LA RD  85029.0          NaN  \n",
+      "213         DRUG OFFENSE            31XX N 20TH ST  85016.0          NaN  \n",
+      "313  MOTOR VEHICLE THEFT       41XX W GLENDALE AVE  85019.0          NaN  \n",
+      "323                ARSON            11XX W BELL RD  85023.0          NaN  \n",
+      "339  MOTOR VEHICLE THEFT  104XX N BLACK CANYON FWY  85051.0          NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 variables have missing data: Occurred On, Occurred To, Zip, Premise Type\n",
+    "print(crime[['date_occurred_on', 'date_occurred_to', 'zip', 'premise_type']].isna().sum())\n",
+    "# 'date_occurred_to' field is blank because the victim knows the exact time the incident occurred and only the 'date_occurred_on' is populated\n",
+    "\n",
+    "# Sum number of incidents where occurred_on and occurred_to are NaN\n",
+    "print(crime[(crime.date_occurred_on.isna()) & (crime.date_occurred_to.isna())])\n",
+    "\n",
+    "# \n",
+    "print(crime.loc[crime['zip'].isna()])\n",
+    "print(crime.loc[crime['date_occurred_on'].isna()].head())\n",
+    "print(crime.loc[crime['date_occurred_to'].isna()].head())\n",
+    "print(crime.loc[crime['premise_type'].isna()].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crime_cat        9\n",
+      "zip             99\n",
+      "premise_type    94\n",
+      "dtype: int64\n",
+      "['MOTOR VEHICLE THEFT' 'RAPE' 'LARCENY-THEFT' 'DRUG OFFENSE' 'BURGLARY'\n",
+      " 'AGGRAVATED ASSAULT' 'MURDER AND NON-NEGLIGENT MANSLAUGHTER' 'ROBBERY'\n",
+      " 'ARSON']\n",
+      "[85029. 85006. 85014. 85307. 85043. 85017. 85085. 85019. 85031. 85027.\n",
+      " 85024. 85339. 85028. 85018. 85015. 85008. 85254. 85051. 85023. 85009.\n",
+      " 85044. 85035. 85041. 85003. 85048. 85353. 85016. 85022. 85033. 85040.\n",
+      " 85007. 85050. 85004. 85054. 85032. 85013. 85034. 85042. 85021. 85012.\n",
+      " 85053. 85308. 85086. 85020. 85037. 85331. 85306. 85083. 85310. 85045.\n",
+      " 85087. 85301. 85253. 85304. 85255. 85251. 85258. 85225. 85363. 85282.\n",
+      " 85268. 85213. 85395. 85202. 85201. 85381. 85281. 85210. 85323. 85224.\n",
+      " 85345. 85302. 85266. 85382. 85392. 85303. 85260. 85286. 85296. 85203.\n",
+      " 85248. 85295. 85290. 85326. 85234. 85283. 85215. 85226. 85257. 85305.\n",
+      "    nan 85383. 85204. 85337. 85396. 85338. 85335. 85233. 85212. 85355.]\n",
+      "['SINGLE FAMILY HOUSE' 'APARTMENT' 'PARKING LOT' 'HOSPITAL' 'VEHICLE'\n",
+      " '07A STOREROOM/SHED (COMMERCIAL)' 'CONDO / TOWNHOUSE' 'HOTEL / MOTEL'\n",
+      " 'CONVENIENCE MARKET / STORE' 'DRIVEWAY' 'RESTAURANT'\n",
+      " 'STREET / ROADWAY / ALLEY / SIDEWALK' 'FAST FOOD STORE'\n",
+      " 'FENCED COMMERCIAL YARD' 'SCHOOL-ELEMENTARY/SECONDARY'\n",
+      " 'GROCERY / SUPER MARKET' 'RETAIL BUSINESS' 'GAS / SERVICE STATION'\n",
+      " 'FENCED RESIDENTIAL YARD' 'SINGLE FAMILY HOUSING' 'UNKNOWN'\n",
+      " 'PARK / PLAYGROUND' 'BAR / LOUNG / NIGHT CLUB'\n",
+      " 'OFFICE / COMMERCIAL BUILDING' 'AIRPORT' 'DEPARTMENT / DISCOUNT STORE'\n",
+      " 'GARAGE' 'SPECIALTY STORE' 'OPEN SPACE / DESERT'\n",
+      " 'RENTAL STORAGE / FACILITY' 'OTHER' nan 'BANK / SAVINGS / CREDIT UNION'\n",
+      " 'PARKING GARAGE' 'SCHOOL-COLLEGE/UNIVERSITY' 'LIGHT RAIL'\n",
+      " 'MEDICAL OFFICE' 'SCHOOL-OTHER' 'CONSTRUCTION SITE' 'WAREHOUSE / FACTORY'\n",
+      " 'CHILD CARE / DAY CARE' 'DRUG STORE' 'BUS' 'MOBILE HOME'\n",
+      " 'CANAL / RIGHT-OF-WAY' 'THEATRE' 'HOSPITIAL / NURSING CARE'\n",
+      " '07A STOREROOM/SHED (RESIDENTIAL)' 'BUS STATION'\n",
+      " 'ADULT ONLY STORE / MOVIE' 'ARENA / STADIUM / CONVENTION CENTER'\n",
+      " 'CARPORT' 'GROUP HOME' 'NURSING CARE' 'SCHOOL/COLLEGE/CHILD CARE'\n",
+      " 'GARAGE / CARPORT' 'STREET / ROADWAY / ALLEY SIDEWALK' 'BUS STOP'\n",
+      " 'CHURCH / SYNAGOGUE / TEMPLE / MOSQUE' 'GOVERNMENT / PUBLIC BUILDING'\n",
+      " 'LIQUOR STORE' 'FOJ - PREMISE UNKNOWN' 'MOUNTAIN AREA' 'STOREROOM / SHED'\n",
+      " 'RAIL STATION' 'JAIL / PRISON / PENITENTIARY' 'DRIVE-IN MOVIE'\n",
+      " 'LOAN / FINANCE COMPANY' 'TRAIN STATION' 'RAIL STOP' 'BUS / LIGHT RAIL'\n",
+      " 'BUS / RAIL STATION' 'RIVER BOTTOM' 'LIGHT RAIL PLATFORM'\n",
+      " 'AUTO DEALERSHIP NEW/USED' 'GAMBLING FACILITY/CASINO/RACE TRACK'\n",
+      " 'LIGHT RAIL TRAIN' 'SHOPPING MALL' 'BUS FACILITY'\n",
+      " 'SHELTER-MISSION/HOMELESS' 'FARM FACILITY' 'LIGHT RAIL FACILITY'\n",
+      " 'PARK AND RIDE' 'DOCK/WHARF/FREIGHT/MODAL TERMINAL' 'CYBERSPACE'\n",
+      " 'COMMUNITY CENTER' 'FIELD/WOODS' 'AMUSEMENT PARK' 'INDUSTRIAL SITE'\n",
+      " 'ABANDONED/CONDEMNED STRUCTURE' 'ATM SEPARATE FROM BANK'\n",
+      " 'LAKE / WATERWAY / BEACH' 'TRIBAL LANDS' 'REST AREA' 'EASEMENT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify the unique values\n",
+    "print(crime[['crime_cat', 'zip', 'premise_type']].nunique())\n",
+    "print(crime.crime_cat.unique())\n",
+    "print(crime.zip.unique())\n",
+    "print(crime.premise_type.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Factorize the categorical variables\n"
    ]
   },
   {
