--- a/Code.ipynb
+++ b/Code.ipynb
@@ -61,6 +61,7 @@
     "data_022718 = 'crime-datacrime-datacrimestat.csv'\n",
     "\n",
     "# Read file in DataFrame\n",
+    "# ZIP as dtype object to remove decimal point\n",
     "crime = pd.read_csv(data_022718, sep=',', low_memory=False, dtype={'ZIP': object})\n",
     "\n",
     "# Quick view of the data\n",
@@ -3010,14 +3011,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import sklearn.metrics\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# split data into train test\n",
     "X_train, X_test, y_train, y_test = train_test_split(basket.drop('zip', axis=1), basket['zip'], test_size=0.3, random_state=42)"
@@ -3025,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3148,7 +3149,7 @@
        "67887         2016             D         Thursday        Winter  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3168,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3180,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3192,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3204,7 +3205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3215,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3226,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3355,7 +3356,7 @@
        "30300                  500  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3369,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3380,7 +3381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3391,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3402,7 +3403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3413,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3567,7 @@
        "12309        2016         500           4        177           458          11  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3587,24 +3588,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encode categorical variables using pd.dummies\n",
-    "train_cols_transform = ['crime_cat', '100_block_addr', 'occ_on_season', 'occ_on_dayofweek', 'premise_type', 'occ_on_month',\n",
-    "                 'occ_on_hr_grp', 'occ_on_day', 'occ_on_year']\n",
+    "# label encoding\n",
+    "from sklearn.preprocessing import LabelEncoder, scale\n",
+    "le = LabelEncoder()\n",
     "\n",
-    "X_train_dum = pd.get_dummies(X_train_new, columns=train_cols_transform)\n",
-    "X_test = pd.get_dummies(X_test)"
+    "for col in X_test.columns.values:\n",
+    "    if X_test[col].dtypes == 'object':\n",
+    "        data=X_train_new[col].append(X_test[col])\n",
+    "        le.fit(data.values)\n",
+    "        X_train_new[col]=le.transform(X_train_new[col])\n",
+    "        X_test[col]=le.transform(X_test[col])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# label encode the target variable\n",
+    "y_train = le.fit_transform(y_train)\n",
+    "y_test = le.fit_transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>crime_cat</th>\n",
+       "      <th>100_block_addr</th>\n",
+       "      <th>occ_on_season</th>\n",
+       "      <th>occ_on_dayofweek</th>\n",
+       "      <th>premise_type</th>\n",
+       "      <th>occ_on_hr_grp</th>\n",
+       "      <th>occ_on_month</th>\n",
+       "      <th>occ_on_day</th>\n",
+       "      <th>occ_on_year</th>\n",
+       "      <th>crime_time</th>\n",
+       "      <th>crime_prem</th>\n",
+       "      <th>crime_dow</th>\n",
+       "      <th>crime_season</th>\n",
+       "      <th>crime_addr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34304</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10748</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>500</td>\n",
+       "      <td>92</td>\n",
+       "      <td>211</td>\n",
+       "      <td>323</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13702</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10748</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>500</td>\n",
+       "      <td>92</td>\n",
+       "      <td>254</td>\n",
+       "      <td>458</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85001</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>500</td>\n",
+       "      <td>107</td>\n",
+       "      <td>211</td>\n",
+       "      <td>323</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91670</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>500</td>\n",
+       "      <td>107</td>\n",
+       "      <td>177</td>\n",
+       "      <td>323</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12309</th>\n",
+       "      <td>7</td>\n",
+       "      <td>7834</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>500</td>\n",
+       "      <td>4</td>\n",
+       "      <td>177</td>\n",
+       "      <td>458</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       crime_cat  100_block_addr  occ_on_season  occ_on_dayofweek  \\\n",
+       "34304          7           10748              1                 1   \n",
+       "13702          7           10748              3                 0   \n",
+       "85001          7            7834              1                 1   \n",
+       "91670          7            7834              1                 4   \n",
+       "12309          7            7834              3                 4   \n",
+       "\n",
+       "       premise_type  occ_on_hr_grp  occ_on_month  occ_on_day  occ_on_year  \\\n",
+       "34304            48              0             8          15            1   \n",
+       "13702            48              0             4          14            1   \n",
+       "85001            90              0             7          27            2   \n",
+       "91670            90              0             0           4            2   \n",
+       "12309            38              0             4           5            1   \n",
+       "\n",
+       "       crime_time  crime_prem  crime_dow  crime_season  crime_addr  \n",
+       "34304         500          92        211           323           2  \n",
+       "13702         500          92        254           458           2  \n",
+       "85001         500         107        211           323          11  \n",
+       "91670         500         107        177           323          11  \n",
+       "12309         500           4        177           458          11  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "X has 9 features per sample; expecting 14",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-7fcd8b7bf179>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_new\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    322\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mper\u001b[0m \u001b[0msample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m         \"\"\"\n\u001b[0;32m--> 324\u001b[0;31m         \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    325\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m             \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    303\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m             raise ValueError(\"X has %d features per sample; expecting %d\"\n\u001b[0;32m--> 305\u001b[0;31m                              % (X.shape[1], n_features))\n\u001b[0m\u001b[1;32m    306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    307\u001b[0m         scores = safe_sparse_dot(X, self.coef_.T,\n",
+      "\u001b[0;31mValueError\u001b[0m: X has 9 features per sample; expecting 14"
+     ]
+    }
+   ],
+   "source": [
+    "# logistic regression baseline\n",
+    "logreg = LogisticRegression()\n",
+    "# fitting\n",
+    "logreg.fit(X_train_new, y_train)\n",
+    "# accuracy\n",
+    "accuracy_score(y_test, logreg.predict(X_test))*100"
+   ]
   }
  ],
  "metadata": {
