--- a/Code.ipynb
+++ b/Code.ipynb
@@ -3692,7 +3692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Initial Prediction**"
+    "**Prediction**"
    ]
   },
   {
@@ -3726,53 +3726,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy Score: 0.6592644158255018\n"
+     ]
+    }
+   ],
    "source": [
     "# logistic regression baseline\n",
     "logreg = LogisticRegression()\n",
     "# fitting\n",
     "logreg.fit(X_train_new, y_train_new)\n",
     "# prediction\n",
-    "y_pred = logreg.predict(X_test_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6552036199095023"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "y_pred = logreg.predict(X_test_new)\n",
     "# logistic regression accuracy\n",
-    "accuracy_score(y_test_new, y_pred)"
+    "print('Logistic Regression Accuracy Score: {}'.format(accuracy_score(y_test_new, y_pred)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.6222531616196775"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes Accuracy Score: 0.6222531616196775\n"
+     ]
     }
    ],
    "source": [
@@ -3782,155 +3768,58 @@
     "#fitting\n",
     "gnb.fit(X_train_new, y_train_new)\n",
     "# accuracy\n",
-    "accuracy_score(y_test_new, gnb.predict(X_test_new))"
+    "print('Naive Bayes Accuracy Score: {}'.format(accuracy_score(y_test_new, gnb.predict(X_test_new))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5659357234017868"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy Score: 0.9991182271725259\n"
+     ]
     }
    ],
    "source": [
-    "# support vector machine\n",
-    "from sklearn.svm import SVC\n",
-    "svm = SVC()\n",
-    "#fitting \n",
-    "svm.fit(X_train_new, y_train_new)\n",
+    "# decision tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf = DecisionTreeClassifier()\n",
+    "# fitting\n",
+    "clf.fit(X_train_new, y_train_new)\n",
     "# accuracy\n",
-    "accuracy_score(y_test_new, svm.predict(X_test_new))"
+    "print('Decision Tree Accuracy Score: {}'.format(accuracy_score(y_test_new, clf.predict(X_test_new))))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Hyperparameter Tuning**"
+    "**Cross Validation**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False),\n",
-       "       fit_params=None, iid=True, n_jobs=1,\n",
-       "       param_grid={'C': array([1.00000e+00, 2.78256e+00, 7.74264e+00, 2.15443e+01, 5.99484e+01,\n",
-       "       1.66810e+02, 4.64159e+02, 1.29155e+03, 3.59381e+03, 1.00000e+04]), 'penalty': ['l1', 'l2']},\n",
-       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
-       "       scoring=None, verbose=0)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hyperparameter testing using GridSearch\n",
-    "\n",
-    "# Create hyperparameter grid\n",
-    "c_space = np.logspace(0, 4, 10)\n",
-    "param_grid = {'C': c_space, 'penalty':['l1', 'l2']}\n",
-    "\n",
-    "# GridSearchCV object\n",
-    "logreg_cv = GridSearchCV(logreg, param_grid, cv=5)\n",
-    "\n",
-    "# Fit to training data\n",
-    "logreg_cv.fit(X_train_new, y_train_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned Logistic Regression Parameter: {'C': 166.81005372000593, 'penalty': 'l2'}\n",
-      "Tuned Logistic Regression Accuracy: 0.6184367541766109\n"
+      "[0.6819975  0.74980754 0.76359349 0.69074199 0.3630282 ]\n",
+      "Average 5-Fold CV Score: 0.6498337456234226\n"
      ]
     }
    ],
    "source": [
-    "# Print the optimal parameters and best score\n",
-    "print(\"Tuned Logistic Regression Parameter: {}\".format(logreg_cv.best_params_))\n",
-    "print(\"Tuned Logistic Regression Accuracy: {}\".format(logreg_cv.best_score_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomizedSearchCV(cv=5, error_score='raise',\n",
-       "          estimator=LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False),\n",
-       "          fit_params=None, iid=True, n_iter=10, n_jobs=1,\n",
-       "          param_distributions={'C': array([1.00000e+00, 2.78256e+00, 7.74264e+00, 2.15443e+01, 5.99484e+01,\n",
-       "       1.66810e+02, 4.64159e+02, 1.29155e+03, 3.59381e+03, 1.00000e+04]), 'penalty': ['l1', 'l2']},\n",
-       "          pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
-       "          return_train_score='warn', scoring=None, verbose=0)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hyperparameter testing using RandomSearch\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
-    "# RandomSearchCV object\n",
-    "logreg_cvrand = RandomizedSearchCV(logreg, param_grid, cv=5)\n",
-    "\n",
-    "# # Fit to training data\n",
-    "logreg_cvrand.fit(X_train_new, y_train_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tuned Logistic Regression Parameter: {'penalty': 'l2', 'C': 21.544346900318832}\n",
-      "Tuned Logistic Regression Accuracy: 0.6191488952190315\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Print the optimal parameters and best score\n",
-    "print(\"Tuned Logistic Regression Parameter: {}\".format(logreg_cvrand.best_params_))\n",
-    "print(\"Tuned Logistic Regression Accuracy: {}\".format(logreg_cvrand.best_score_))"
+    "# Cross Validation Score\n",
+    "cv_scores = cross_val_score(clf, X_train_new, y_train_new, cv=5)\n",
+    "print(cv_scores)\n",
+    "print(\"Average 5-Fold CV Score: {}\".format(np.mean(cv_scores)))"
    ]
   },
   {
